# pifos

./: .gitignore  Makefile  pyproject.toml  requirements.txt
docs/: 01_konzept.md  02_anforderungen.md  03_machbarkeit.md  04_implementierungsplan.md  05_bereitstellung.md  05_standardkomponenten.md  INDEX.md  diagramme.md  software.md
docs/archiv/: 02_anforderungen.md  06_bereitstellung.md
docs/software/: 01-ueberblick.md  02-aktionen.md  03-module.md  04-konfiguration.md  05-aufrufer.md  06-prozessmodell-ipc.md  07-logging.md  08-fehlerbehandlung.md  09-konfigurator.md
tests/: __init__.py
tests/integration/: __init__.py  copy_file_module.py  test_copy_file_module.py
tests/unit/: __init__.py  test_action.py  test_apt_action.py  test_block_in_file_action.py  test_caller.py  test_config.py  test_configurator.py  test_copy_file_action.py  test_delete_file_action.py  test_errors.py  test_ipc.py  test_line_in_file_action.py  test_make_dir_action.py  test_module.py  test_move_file_action.py  test_permissions_action.py  test_remote_copy_action.py  test_replace_in_file_action.py  test_send_mail_action.py  test_symlink_action.py  test_sys_cmd_action.py  test_systemd_service_action.py  test_tar_action.py  test_untar_action.py  test_write_file_action.py
usr/lib/pifos/: __init__.py  action.py  caller.py  configurator.py  errors.py  ipc.py  module.py  runner.py
usr/lib/pifos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
usr/lib/pifos/actions/: __init__.py  _file_ops.py  apt_action.py  block_in_file_action.py  copy_file_action.py  delete_file_action.py  tar_action.py  (+12 more)
(+5 files in other folders)
