[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pifos"
version = "0.1.0"
description = "Python Infrastructure for Operational Services"
requires-python = ">=3.13"

[tool.setuptools.packages.find]
where = ["usr/lib"]

[tool.ruff]
target-version = "py313"
line-length = 88
extend-include = ["bin/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "BLE", "C4", "UP", "SIM", "TID", "S", "RUF"]
ignore = ["S603"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"usr/lib/pifos/runner.py" = ["BLE001"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.13"
files = ["usr/lib", "tests"]
strict = true

[[tool.mypy.overrides]]
module = "tomli_w"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
